# pistomp-recovery

./: .gitignore  CLAUDE.md  MENU-REDESIGN.md  PI-STOMP-INTEGRATION.md  README.md  REFACTOR-PLAN.md  deploy.sh  pyproject.toml  run_emulator.sh
docs/: CHANGELOG_VIEWER_PLAN.md
emulator/: bootstrap.py  controls.py  lcd_pygame.py  window.py
files/: pistomp-recovery.service
pkgbuilds/pistomp-recovery/: PKGBUILD
src/pistomp_recovery/: __main__.py  app.py  backends.py  backends_real.py  boot.py  config.py  constants.py  facet.py  file_facet.py  git_util.py  items.py  pedalboards.py  plugins.py  pygame_init.py  service.py  stamp.py  system.py  util.py
src/pistomp_recovery/emulator/: backends.py  bootstrap.py  controls.py  lcd_pygame.py  window.py
src/pistomp_recovery/facets/: base.py  config_facet.py  packages_facet.py  pedalboards_facet.py  system_facet.py
src/pistomp_recovery/hardware/: driver_patch.py  encoder.py  lcd.py  switch.py  tweak_pot.py  version.py
src/pistomp_recovery/ui/: colors.py  display.py  input.py
src/pistomp_recovery/ui/fonts/: NOTICE.md  __init__.py
src/pistomp_recovery/ui/screens/: __init__.py  config_screen.py  crash.py  log_view.py  main_menu.py  menu_screen.py  packages_screen.py  pedalboards_screen.py  reset_screen.py  (+4 more)
tests/: conftest.py  test_apt_sources.py  test_backends_domains.py  test_boot.py  test_box.py  test_config.py  test_constants.py  test_dirty_rects.py  test_emulator_saga.py  test_git_util.py  test_health.py  test_models.py  test_paint_context.py  test_plugins.py  test_screens.py  test_service.py  test_system.py  test_widgets.py
(+10 files in other folders)
