[project]
name = "pistomp-recovery"
version = "0.1.0"
description = "Package update and recovery service for pi-Stomp"
requires-python = ">=3.12"
dependencies = ["pygame>=2.5", "numpy>=2.4"]

[project.optional-dependencies]
hardware = [
    "lgpio>=0.2; sys_platform == 'linux'",
    "rpi-lgpio>=0.3; sys_platform == 'linux'",
    "spidev>=3.6; sys_platform == 'linux'",
    "adafruit-circuitpython-rgb-display>=1.0; sys_platform == 'linux'",
    "adafruit-circuitpython-mcp3xxx>=1.0; sys_platform == 'linux'",
    "pillow>=10.0; sys_platform == 'linux'",
    "gpiozero>=2.0; sys_platform == 'linux'",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8", "pyright>=1.1", "pillow>=10.0"]

[project.scripts]
pistomp-recovery = "pistomp_recovery.__main__:main"
pistomp-stamp = "pistomp_recovery.stamp:main"
pistomp-recovery-emulator = "pistomp_recovery.emulator.bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pistomp_recovery"]
artifacts = ["src/pistomp_recovery/ui/fonts/*.ttf"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportMissingImports = false
reportMissingModuleSource = false
